[package]
name = "zero_pass_web"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
zero_pass_backend = "0.2.3"
yew = { version = "0.20.0", features = ["csr"] }
wasm-bindgen = "0.2"
web-sys = { version = "0.3.61", features = ["HtmlSelectElement"] }
